add bonuses
