# server/docs/swagger.yaml
@@ -30,6 +30,51 @@ info:
   title: Surf DB API
   version: "1.0"
 paths:
+  /sh/records/bonus/{mapname}/:
+    get:
+      parameters:
+      - description: map name
+        in: path
+        name: mapname
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Record'
+            type: array
+      summary: get all records for all bonuses
+      tags:
+      - surfheaven
+  /sh/records/bonus/{mapname}/{bonus}:
+    get:
+      parameters:
+      - description: map name
+        in: path
+        name: mapname
+        required: true
+        type: string
+      - description: bonus e.g. 1, 2, ...
+        in: path
+        name: bonus
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Record'
+            type: array
+      summary: get all records for specific bonus
+      tags:
+      - surfheaven
   /sh/records/map/{mapname}:
     get:
       parameters:
@@ -48,6 +93,26 @@ paths:
               $ref: '#/definitions/models.Record'
             type: array
       summary: get all records for map by map name
+      tags:
+      - surfheaven
+  /sh/records/stage/{mapname}/:
+    get:
+      parameters:
+      - description: map name
+        in: path
+        name: mapname
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Record'
+            type: array
+      summary: get all records for all stages
       tags:
       - surfheaven
   /sh/records/stage/{mapname}/{stage}:
@@ -73,26 +138,6 @@ paths:
               $ref: '#/definitions/models.Record'
             type: array
       summary: get all records for specific stage
-      tags:
-      - surfheaven
-  /sh/records/stages/{mapname}/:
-    get:
-      parameters:
-      - description: map name
-        in: path
-        name: mapname
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/models.Record'
-            type: array
-      summary: get all records for all stages
       tags:
       - surfheaven
 swagger: "2.0"
